# gemanx

./: .gitignore  AUTHORS  ChangeLog  INSTALL.wiki  Makefile.am  TODO  autogen.sh  config.h.in  configure.ac  gemanx-gtk2.spec.in  gemanx.desktop.in
data/: Makefile.am
po/: POTFILES.in  POTFILES.skip  zh_CN.po  zh_TW.po
src/: Makefile.am  appconfig.cpp  appconfig.h  configfile.cpp  configfile.h  downarticledlg.cpp  downarticledlg.h  gemanx_gtk2.cpp  gemanx_inverse_xpm.xpm  gemanx_xpm.xpm  generalprefpage.cpp  generalprefpage.h  mainframe.cpp  mainframe.h  sitepage.cpp  sitepage.h
src/core/: Makefile.am  caret.cpp  caret.h  encoding.cpp  encoding.h  fileutil.h  font.cpp  font.h  pkgver.c  proxy.h  site.cpp  site.h  stringutil.h  termdata.cpp  termdata.h  termsel.cpp  termsel.h  termview.cpp  termview.h  view.h  widget.cpp  widget.h
src/docklet/: api.h  clipboard.c
src/nancy_bot/: api.h  botutil.h  msgdata.h
src/notifier/: api.h
src/qqwryseeker/: qqwryseeker.c
src/view/: telnetcon.cpp  telnetcon.h  telnetview.cpp  telnetview.h
